# omni-sdk-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: basic_usage.cpp
include/omni_sdk/: client.h  config.h  device.h  omni_sdk.h  result.h
include/omni_sdk/clients/: serial_client.h  ssh_client.h
include/omni_sdk/utils/: logging.h
src/: config.cpp  omni_sdk.cpp
src/clients/: serial_client.cpp  ssh_client.cpp
tests/: CMakeLists.txt  test_comprehensive.cpp  test_config.cpp  test_framework.cpp  test_integration.cpp  test_omni_sdk.cpp  test_result.cpp  test_serial_client.cpp  test_ssh_client.cpp
